@@ -1137,7 +1137,7 @@
                 if ((operator == 'ilike') || (operator == 'not ilike')) {
                     value = this.likify(value);
                 }
-                new_domain = this.append_ending_clause(domain,
+                var new_domain = this.append_ending_clause(domain,
                         [field.name, operator, value], deep);
                 new_domain_string = this.string(new_domain);
                 results.push(pslice(new_domain_string, deep));
